# Dongle-Smartcontract

./: .gitignore
dongle-smartcontract/: Cargo.toml
dongle-smartcontract/src/: admin_manager.rs  auth.rs  constants.rs  errors.rs  events.rs  fee_manager.rs  lib.rs  project_registry.rs  rating_calculator.rs  review_registry.rs  types.rs  validation.rs  verification_registry.rs  verification_state_machine.rs
dongle-smartcontract/src/tests/: admin.rs  authorization.rs  error_handling_tests.rs  events.rs  fixtures.rs  mod.rs  pagination.rs  registration.rs  review.rs  validation_tests.rs  verification.rs  verification_state_machine.rs
dongle-smartcontract/test_snapshots/review_registry/test/: test_add_review_event.1.json  test_delete_review_event.1.json  test_update_review_event.1.json
