[package]
name = "dongle-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.0" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
soroban-sdk = "21.7.6"

[dev-dependencies]
soroban-sdk = { version = "21.7.6", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
overflow-checks = true
opt-level = "z"
lto = true
codegen-units = 1
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
